--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:reset": "prisma db push --force-reset",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "validate:env": "node scripts/validateEnvironment.js",
+
+    "security:check": "npm run validate:env"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
